# md-editor

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  md-editor-tr.lang  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
