[package]
name = "md-editor"
version = "1.0.0"
description = "Browser Markdown Editor - Desktop App"
authors = ["ThinkerDan"]
edition = "2021"

[lib]
name = "md_editor"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
time = "=0.3.36"
